# droplet-investigation

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  RUST_INTEGRATION_GUIDE.md  cli.py  cluster.py  config.toml  delta_f_sweep.json  example_params.txt  example_sweep.json  json_runner.py  main.py  poster_run.py  poster_sweep.json  simulation.py  slurm_config.yml  slurm_submit.py  smoke_test.json  split_droplet_sweep.json  testOne.md  yongick_64_sweep.json  yongick_geometry_sweep.json
.cargo/: config.toml
results/test0/: density_series.csv  final_lattice.npy
results/test1/: density_series.csv  final_lattice.npy
results/test2/: density_series.csv  final_lattice.npy
scripts/: generate_split_droplet_geometry.py  generate_yongick_geometries.py  poster_daemon.sh  run_job.sh  slurm.env.example  submit_one.sh  submit_poster.sh  submit_split_sweep.sh  submit_sweep.sh  submit_yongick_sweep.sh
src/: config.rs  main.rs  test2.md  test2.rs
