[package]
name = "droplet-investigation"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test1"
path = "src/test1.rs"

[[bin]]
name = "test2"
path = "src/test2.rs"


[dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
lattice_gas = { path = "../lattice-gas" }
rand = "0.9"
ndarray = "0.16"
ndarray-npy = "0.9"

